--- a/product/templates/product/detail.htm
+++ b/product/templates/product/detail.htm
@@ -73,7 +73,7 @@
 					{% endif %}
 					<div class="product-category">
 						<span>Quantity:</span>
-						{{product.category}}
+						{{product.quantity}}
 					</div>
 					{% if product.product_type|stringformat:"s" != "device" %}
 						<div class="product-category">
@@ -90,7 +90,7 @@
 						<span>Manufacturer:</span>
 						{{product.manufacturer}}
 					</div>
-					<a href="cart.htm" class="btn btn-main mt-20">update</a>
+					<a href="#" class="btn btn-main mt-20">update</a>
 				</div>
 			</div>
 		</div>
