--- a/product/templates/product/shop.htm
+++ b/product/templates/product/shop.htm
@@ -11,8 +11,8 @@
 				<div class="content">
 					<h1 class="page-name">Shop</h1>
 					<ol class="breadcrumb">
-						<li><a href="/">Home</a></li>
-						<li class="active">shop</li>
+						<li><a href="#">Home</a></li>
+						<li class="active">Shop</li>
 					</ol>
 				</div>
 			</div>
@@ -61,7 +61,7 @@
 									</div>
 								</div>
 								<div class="product-content">
-									<h4><a href="product-single.htm">{{image.product.title}}</a></h4>
+									<h4><a href="/product/shop/detail/{{image.product.id}}">{{image.product.title}}</a></h4>
 									<p class="price">Rs.{{image.product.price}}</p>
 								</div>
 							</div>
