- [x] lab code finished now testing and editting templates - [x] rendering problem after lab login and creation of services module - [x] rendering problem in lab/profile-details as well so cherrypicking previous commit - [x] lab/product details problem resolved, services module left - [x] now commiting to customer module branch as done in main branch - [x] uploading previously incomplete code

--- a/customer/templates/customer/dashboard.htm
+++ b/customer/templates/customer/dashboard.htm
@@ -12,6 +12,7 @@
                     <li><a class="active" href="/customer/dashboard/">Dashboard</a></li>
                     <li><a href="/customer/order/">Orders</a></li>
                     <li><a href="/customer/profile-details/">Profile Details</a></li>
+                    <li><a href="/customer/appointment/">Lab Appointments</a></li>
                 </ul>
                 <div class="dashboard-wrapper user-dashboard">
                     <div class="media">
