--- a/customer/templates/customer/order.htm
+++ b/customer/templates/customer/order.htm
@@ -12,6 +12,7 @@
                     <li><a href="/customer/dashboard/">Dashboard</a></li>
                     <li><a class="active" href="/customer/order/">Orders</a></li>
                     <li><a href="/customer/profile-details/">Profile Details</a></li>
+                    <li><a href="/customer/appointment/">Lab Appointments</a></li>
                 </ul>
                 <div style="margin-top: 20px;">
                     <nav class="navbar navbar-light bg-light text-center">
