--- a/customer/templates/customer/profile-details.htm
+++ b/customer/templates/customer/profile-details.htm
@@ -13,6 +13,7 @@
                     <li><a href="/customer/dashboard/">Dashboard</a></li>
                     <li><a href="/customer/order/">Orders</a></li>
                     <li><a class="active" href="/customer/profile-details/">Profile Details</a></li>
+                    <li><a href="/customer/appointment/">Lab Appointments</a></li>
                 </ul>
                 <div class="dashboard-wrapper dashboard-user-profile">
                     <div class="media">
