--- a/templates/snippets/customer-header.htm
+++ b/templates/snippets/customer-header.htm
@@ -68,6 +68,9 @@
                     <li class="dropdown">
                         <a href="/customer/vendors/">Vendors</a>
                     </li>
+                    <li class="dropdown">
+                        <a href="/customer/lab/">Lab</a>
+                    </li>
                    
                 </ul><!-- / .nav .navbar-nav -->
             </div>
