--- a/templates/snippets/header.htm
+++ b/templates/snippets/header.htm
@@ -55,6 +55,11 @@
                             <i class="tf-ion-android-person"></i>Vendor</a>
                         </a>
                     </li>
+                    <li class="#">
+                        <a href="/lab/login">
+                            <i class="tf-ion-android-person"></i>Medical Lab</a>
+                        </a>
+                    </li>
                     <!-- / account -->
 
                 </ul><!-- / .nav .navbar-nav .navbar-right -->
