--- a/cart/templates/cart/cart.htm
+++ b/cart/templates/cart/cart.htm
@@ -60,7 +60,7 @@
 
                       </tbody>
                     </table>
-                    <a href="/order/checkout" class="btn btn-main pull-right">Checkout</a>
+                    <a href="/order/checkout/{{items.grouper.id}}" class="btn btn-main pull-right">Checkout</a>
                   </form>
                   </div>
                 {% endfor %}
