--- a/customer/templates/customer/lab-details.htm
+++ b/customer/templates/customer/lab-details.htm
@@ -55,7 +55,7 @@
                                 </div>
                                 <div class="product-content">
                                     <h4><a href="/product/shop/detail/{{image.product.id}}">{{image.product.title}}</a></h4>
-                                    <p class="price">Rs.{{image.product.price}}</p>
+                                    <p class="price">$ {{image.product.price}}</p>
                                 </div>
                             </div>
                         </div>
