--- a/product/templates/product/list.htm
+++ b/product/templates/product/list.htm
@@ -34,18 +34,18 @@
                                             <i class="tf-ion-ios-search-strong"></i>
                                         </a>
                                     </li>
-                                    <!-- <li>
-                                        <a href="#!" ><i class="tf-ion-edit"></i></a>
-                                    </li> -->
-                                    <!-- <li>
-                                        <a href="#!"><i class="tf-ion-android-delete"></i></a>
-                                    </li> -->
+                                    <li>
+                                        <a href="/product/update/{{image.product.product_type}}/{{image.product.id}}" ><i class="tf-ion-edit"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="/product/delete/{{image.product.id}}"><i class="tf-ion-android-delete"></i></a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
                         <div class="product-content">
                             <h4><a href="product-single.htm">{{image.product.title}}</a></h4>
-                            <p class="price">Rs.{{image.product.price}}</p>
+                            <p class="price">$ {{image.product.price}}</p>
                         </div>
                     </div>
                 </div>
