--- a/service/templates/service/list.htm
+++ b/service/templates/service/list.htm
@@ -45,7 +45,7 @@
                         </div>
                         <div class="product-content">
                             <h4><a href="service-single.htm">{{image.service.title}}</a></h4>
-                            <p class="price">Rs.{{image.service.price}}</p>
+                            <p class="price">$ {{image.service.price}}</p>
                         </div>
                     </div>
                 </div>
