--- a/medicalapp/templates/medicalapp/index.htm
+++ b/medicalapp/templates/medicalapp/index.htm
@@ -113,7 +113,7 @@
 						</div>
 						<div class="product-content">
 							<h4><a href="/customer/login">{{image.product.title}}</a></h4>
-							<p class="price">Rs.{{image.product.price}}</p>
+							<p class="price">$ {{image.product.price}}</p>
 						</div>
 					</div>
 				</div>
