--- a/order/templates/order/checkout.htm
+++ b/order/templates/order/checkout.htm
@@ -12,91 +12,68 @@
             <div class="col-md-8">
                <div class="block billing-details">
                   <h4 class="widget-title">Billing Details</h4>
-                  <form class="checkout-form">
+                  <form class="checkout-form" method="POST" action="/order/checkout/{{id}}/">
+                     {% csrf_token %}
                      <div class="form-group">
-                        <label for="full_name">Full Name</label>
-                        <input type="text" class="form-control" id="full_name" placeholder="">
+                        <label for="user_address">Full Name</label>
+                        {{form.full_name}}
+                        <p class="help">{{form.full_name.errors }}</p>
                      </div>
-                     <div class="form-group">
-                        <label for="user_address">Address</label>
-                        <input type="text" class="form-control" id="user_address" placeholder="">
-                     </div>
+                     <!-- <div class="checkout-country-code clearfix"> -->
+                        <div class="form-group">
+                           <label for="user_address">Shipping Location</label>
+                           {{form.shipping_location}}
+                           <p class="help">{{form.shipping_location.errors }}</p>
+                        </div>
+                        <div class="form-group">
+                           <label for="user_address">Google Map URL</label>
+                           {{form.map_url}}
+                           <p class="help">{{form.map_url.errors }}</p>
+                        </div>
+                     <!-- </div> -->
                      <div class="checkout-country-code clearfix">
                         <div class="form-group">
-                           <label for="user_post_code">Zip Code</label>
-                           <input type="text" class="form-control" id="user_post_code" name="zipcode" value="">
+                           <label for="user_post_code">Email</label>
+                           {{form.email}}
+                           <p class="help">{{form.email.errors }}</p>
                         </div>
                         <div class="form-group" >
-                           <label for="user_city">City</label>
-                           <input type="text" class="form-control" id="user_city" name="city" value="">
+                           <label for="user_city">Contact Number</label>
+                           {{form.contact_number}}
+                           <p class="help">{{form.contact_number.errors }}</p>
                         </div>
                      </div>
-                     <div class="form-group">
-                        <label for="user_country">Country</label>
-                        <input type="text" class="form-control" id="user_country" placeholder="">
-                     </div>
+
+                     <!-- <div class="text-center"> -->
+                        <button type="submit" class="btn btn-main text-center" >Place Order</button>
+                      <!-- </div> -->
                   </form>
                </div>
-               <!-- <div class="block">
-                  <h4 class="widget-title">Payment Method</h4>
-                  <p>Credit Cart Details (Secure payment)</p>
-                  <div class="checkout-product-details">
-                     <div class="payment">
-                        <div class="card-details">
-                           <form  class="checkout-form">
-                              <div class="form-group">
-                                 <label for="card-number">Card Number <span class="required">*</span></label>
-                                 <input  id="card-number" class="form-control"   type="tel" placeholder="•••• •••• •••• ••••">
-                              </div>
-                              <div class="form-group half-width padding-right">
-                                 <label for="card-expiry">Expiry (MM/YY) <span class="required">*</span></label>
-                                 <input id="card-expiry" class="form-control" type="tel" placeholder="MM / YY">
-                              </div>
-                              <div class="form-group half-width padding-left">
-                                 <label for="card-cvc">Card Code <span class="required">*</span></label>
-                                 <input id="card-cvc" class="form-control"  type="tel" maxlength="4" placeholder="CVC" >
-                              </div>
-                              <a href="confirmation.htm" class="btn btn-main mt-20">Place Order</a >
-                           </form>
-                        </div>
-                     </div>
-                  </div>
-               </div> -->
             </div>
             <div class="col-md-4">
                <div class="product-checkout-details">
                   <div class="block">
                      <h4 class="widget-title">Order Summary</h4>
-                     <div class="media product-card">
-                        <a class="pull-left" href="product-single.htm">
-                           <img class="media-object" src={% static 'images/shop/cart/cart-1.jpg' %} alt="Image" />
-                        </a>
-                        <div class="media-body">
-                           <h4 class="media-heading"><a href="product-single.htm">Ambassador Heritage 1921</a></h4>
-                           <p class="price">1 x $249</p>
-                           <span class="remove" >Remove</span>
+
+                     {% for item in items %}
+                        <div class="media product-card">
+                           <a class="pull-left" href="product-single.htm">
+                              <img class="media-object" src="/media/{{item.image.image}}" alt="Image" />
+                           </a>
+                           <div class="media-body">
+                              <h4 class="media-heading"><a href="product-single.htm">{{item.product.title}}</a></h4>
+                              <p class="price">{{item.quantity}} x $ {{item.unit_price}}</p>
+                              <span class="remove" >Remove</span>
+                           </div>
                         </div>
-                     </div>
-                     <div class="discount-code">
-                        <p>Have a discount ? <a data-toggle="modal" data-target="#coupon-modal" href="#!">enter it here</a></p>
-                     </div>
+                     {% endfor %}
+
                      <ul class="summary-prices">
-                        <li>
-                           <span>Subtotal:</span>
-                           <span class="price">$190</span>
-                        </li>
-                        <li>
-                           <span>Shipping:</span>
-                           <span>Free</span>
-                        </li>
                      </ul>
                      <div class="summary-total">
                         <span>Total</span>
-                        <span>$250</span>
+                        <span>$ {{total}}</span>
                      </div>
-                     <!-- <div class="verified-icon">
-                        <img src={% static 'images/shop/verified.png' %}>
-                     </div> -->
                   </div>
                </div>
             </div>
