--- a/product/templates/product/updatedevice.htm
+++ b/product/templates/product/updatedevice.htm
@@ -17,13 +17,12 @@
               </a>
             </div>
             
-            <h3 class="text-center"><i class="tf-ion-android-add"></i> Add Product</h3>
-            <p>Choose to add a product</p>
-            <h4 class="mt-10">Hygenic</h4>
-            <!-- hygenic form -->
-            <form enctype="multipart/form-data" class="text-left clearfix" action="/product/add/hygenic_product/" method="POST" id="hygenic">
+            <h3 class="text-center"><i class="tf-ion-android-add"></i> Update Product</h3>
+            <h4 class="mt-10">Device</h4>
+            <!-- device form -->
+            <form enctype="multipart/form-data" class="text-left clearfix" action="/product/update/device/{{product.id}}" method="POST" id="device" >
               {% csrf_token %}
-              <input type="hidden" name="product_type" value="hygenic_product">
+              <input type="hidden" name="product_type" value="device">
               <div class="form-group">
                 <label for="inputName">Name:</label>
                 {{form.title}}
@@ -46,18 +45,6 @@
                   <p class="help">{{form.quantity.errors }}</p>
                 </div>
               </div>
-              <div class="form-row">
-                <div class="form-group col-md-6 leftside">
-                  <label for="inputManifactureDate">Manufactured Date</label>
-                  {{form.manufacture_date}}
-                  <p class="help">{{form.manufacture_date.errors }}</p>
-                </div>
-                <div class="form-group col-md-6 rightside">
-                  <label for="inputExpiryDate">Expiry Date</label>
-                  {{form.expiry_date}}
-                  <p class="help">{{form.expiry_date.errors }}</p>
-                </div>
-              </div>
               <div class="form-group">
                 <label for="inputManufacture">Manufactured by</label>
                 {{form.manufacturer}}
@@ -72,12 +59,14 @@
                 <label for="OpenfileUpload">Upload the picture of the product</label>
                 {{img_form.image}}
                 {{img_form.image.errors}}   
+              <!-- <input class="mt-20" type="file" id="image" multiple required> -->
               </div>
               <hr>
               <div class="text-center">
-                <button type="submit" class="btn btn-main text-center" >Add Product</button>
+                <button type="submit" class="btn btn-main text-center" >Update Product</button>
               </div>
             </form>
+            <!-- hygenic form -->
           </div>
         </div>
       </div>
