--- a/product/templates/product/updatehygenic_product.htm
+++ b/product/templates/product/updatehygenic_product.htm
@@ -17,11 +17,10 @@
               </a>
             </div>
             
-            <h3 class="text-center"><i class="tf-ion-android-add"></i> Add Product</h3>
-            <p>Choose to add a product</p>
+            <h3 class="text-center"><i class="tf-ion-android-add"></i> Update Product</h3>
             <h4 class="mt-10">Hygenic</h4>
             <!-- hygenic form -->
-            <form enctype="multipart/form-data" class="text-left clearfix" action="/product/add/hygenic_product/" method="POST" id="hygenic">
+            <form enctype="multipart/form-data" class="text-left clearfix" action="/product/update/hygenic_product/{{product.id}}" method="POST" id="hygenic">
               {% csrf_token %}
               <input type="hidden" name="product_type" value="hygenic_product">
               <div class="form-group">
@@ -75,7 +74,7 @@
               </div>
               <hr>
               <div class="text-center">
-                <button type="submit" class="btn btn-main text-center" >Add Product</button>
+                <button type="submit" class="btn btn-main text-center" >Update Product</button>
               </div>
             </form>
           </div>
