--- a/templates/snippets/product-model.htm
+++ b/templates/snippets/product-model.htm
@@ -17,7 +17,7 @@
                     <div class="col-md-4 col-sm-6 col-xs-12">
                         <div class="product-short-details">
                             <h2 class="product-title">{{image.product.title}}</h2>
-                            <p class="product-price">Rs. {{image.product.price}}</p>
+                            <p class="product-price">$ {{image.product.price}}</p>
                             <p class="product-short-description">
                                 {{image.product.description}}
                             </p>
